historydata 0.1
===============

* Added sarna: Population estimates for American Jews.

* Added us_state_populations: Populations of US states and territories.

* Added catholic_dioceses: Locations and dates founded for Roman Catholic
  dioceses in the United States, Mexico, and Canada.

* Added naval_promotions: Career data for officers of the line in the early
  U.S. Navy.

* Added us_national_population: Populations of the United States of America.