@@ -1,0 +1,66 @@
+college,original_name,city,state,established,sponsorship
+Harvard,,Cambridge,MA,1636,Congregational; after 1805 Unitarian
+William and Mary,,Williamsburg,VA,1693,Anglican
+Yale,,New Haven,CT,1701,Congregational
+"Pennsylvania, Univ. of",,Philadelphia,PA,1740,Nondenominational
+Princeton,College of New Jersey,Princeton,NJ,1746,Presbyterian
+Columbia,King's College,New York,NY,1754,Anglican
+Brown,,Providence,RI,1765,Baptist
+Rutgers,Queen's College,New Brunswick,NJ,1766,Dutch Reformed
+Dartmouth,,Hanover,NH,1769,Congregational
+"Charleston, Coll. Of",,Charleston,SC,1770,Anglican
+Hampden-Sydney,,Hampden-Sydney,VA,1775,Presbyterian
+Transylvania,,Lexington,KY,1780,Disciples of Christ
+"Georgia, Univ. of",,Athens,GA,1785,Secular
+Georgetown,,Washington,DC,1789,Roman Catholic
+"North Carolina, Univ. of",,Chapel Hill,NC,1789,Secular
+"Vermont, Univ. of",,Burlington,VT,1791,Nondenominational
+Williams,,Williamstown,MA,1793,Congregational
+"Tennessee, Univ. of",Blount College,Knoxville,TN,1794,Secular
+Union College,,Schenectady,NY,1795,Presbyterian with Congregational
+Marietta,,Marietta,OH,1797,Congregational
+U.S. Military Academy,,West Point,NY,1802,Secular
+Ohio Univ.,,Athens,OH,1804,Secular
+Miami Univ.,,Oxford,OH,1809,Secular
+"Maryland, Univ. of",,Baltimore,MD,1812,Secular
+Colby,,Waterville,ME,1813,Baptist
+Allegheny,,Meadville,PA,1815,Methodist
+St. Louis Univ.,,St. Louis,MO,1818,Roman Catholic
+"Cincinnati, Univ. of",,Cincinnati,OH,1819,Nondenominational
+Colgate,,Hamilton,NY,1819,Baptist
+Maryville,,Maryville,TN,1819,Presbyterian
+Amherst,,Amherst,MA,1821,Congregational
+George Washington,Columbian College,Washington,DC,1821,Nondenominational
+Trinity,,Hartford,CT,1823,Episcopal
+Kenyon,,Gambier,OH,1824,Episcopal
+Lafayette,,Easton,PA,1826,Presbyterian
+Western Reserve Univ.,,Cleveland,OH,1826,Congregational
+Illinois College,,Jacksonville,IL,1829,Congregational
+Denison,,Granville,OH,1831,Baptist
+New York Univ.,,New York,NY,1831,Nondenominational
+Xavier,,Cincinnati,OH,1831,Roman Catholic
+Gettysburg,,Gettysburg,PA,1832,Lutheran
+Oberlin,,Oberlin,OH,1833,Congregational
+Wake Forest College,,Wake Forest,NC,1833,Baptist
+Wesleyan Univ.,,Middletown,CT,1833,Wesleyan Methodist
+Wheaton,,Norton,MA,1834,Nondenominational
+Emory,,Atlanta,GA,1836,Methodist
+Mount Holyoke,,South Hadley,MA,1837,Congregational
+Duke,,Durham,NC,1838,Methodist
+Greensboro,,Greensboro,NC,1838,Methodist
+"Missouri, Univ. of",,Columbia,MO,1839,Secular
+Fordham,,Fordham,NY,1841,Roman Catholic
+Bethel,,McKenzie,TN,1842,Presbyterian
+Cumberland,,Lebanon,TN,1842,Presbyterian
+Notre Dame,,Notre Dame,IN,1842,Roman Catholic
+Villanova,,Villanova,PA,1842,Roman Catholic
+Holy Cross,,Worchester,MA,1843,Roman Catholic
+"Mississipps, Univ. of",,Oxford,MI,1844,Secular
+"Louisiana, Univ. of",,New Orleans,LA,1845,Secular
+U.S. Naval Academy,,Annapolis,MD,1845,Secular
+Beloit,,Beloit,WI,1846,Congregational
+Bucknell,,Lewisburg,PA,1846,Baptist
+Grinnell,,Grinnell,IA,1846,Congregational
+Mount Union,,Alliance,OH,1846,Methodist
+Earlham,,Richmond,IN,1847,Quaker
+"Wisconsin, Univ. of",,Madison,WI,1848,Secular
