@@ -12,3 +12,5 @@ historydata 0.1
   U.S. Navy.
 
 * Added us_national_population: Populations of the United States of America.
+
+* Added early_colleges: Colleges founded in the United States before 1848.
